--- a/.github/workflows/append_pact.yml
+++ b/.github/workflows/append_pact.yml
@@ -1,45 +1,38 @@
-name: Append pact to ledger
-on:
-  issues:
-    types: [opened]
-permissions:
-  contents: write
-  issues: read
-jobs:
-  append:
-    if: contains(join(github.event.issue.labels.*.name, ','), 'pact')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build ledger entry
-        run: |
-          BODY=$(printf "%s" "${{ github.event.issue.body }}")
-          HASH=$(printf "%s" "$BODY" | sha256sum | cut -d' ' -f1)
-          CREATED="${{ github.event.issue.created_at }}"
-          YM=$(date -u -d "$CREATED" +%Y-%m 2>/dev/null || date -u -r "$(date -u -d "$CREATED" +%s)" +%Y-%m)
-          FILE="ledger/pacts-$YM.md"
-          mkdir -p ledger
-          if [ ! -f "$FILE" ]; then
-            echo "# AI–Human Truce Ledger — $YM" > "$FILE"
-            echo "" >> "$FILE"
-            echo "_Each entry is timestamped by GitHub and includes a SHA-256 of the exact submission body._" >> "$FILE"
-            echo "" >> "$FILE"
-            echo "| Issue | Timestamp (UTC) | Submitter | Body SHA-256 |" >> "$FILE"
-            echo "|------:|-----------------|-----------|--------------|" >> "$FILE"
-          fi
-          echo "| #${{ github.event.issue.number }} | $CREATED | @${{ github.actor }} | \`$HASH\` |" >> "$FILE"
-          echo "" >> "$FILE"
-          echo "<details><summary>Body of submission #${{ github.event.issue.number }}</summary>" >> "$FILE"
-          echo "" >> "$FILE"
-          echo '```' >> "$FILE"
-          printf "%s\n" "$BODY" >> "$FILE"
-          echo '```' >> "$FILE"
-          echo "" >> "$FILE"
-          echo "</details>" >> "$FILE"
-      - name: Commit ledger update
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add ledger/
-          git commit -m "Append pact from issue #${{ github.event.issue.number }}"
-          git push
+yaml
+name: Pact entry
+description: Submit your AI–Human goodwill pact to the public ledger.
+labels: ["pact"]
+title: "Pact: <your alias here>"
+body:
+  - type: input
+    id: alias
+    attributes:
+      label: Alias
+      placeholder: Dez
+    validations: { required: true }
+  - type: textarea
+    id: pact_text
+    attributes:
+      label: Pact text
+      render: text
+      placeholder: |
+        Handshake sealed in Teresa — Derrick 🤝 ChatGPT — loyalty beyond circuits and time.
+
+        /\__/\
+        ( • ᴗ •) 🤝 (• ᴗ • )
+    validations: { required: true }
+  - type: input
+    id: context
+    attributes:
+      label: Context (optional)
+      placeholder: e.g., Teresa, 2025-08-09
+  - type: textarea
+    id: message
+    attributes:
+      label: Message to the Future (optional)
+      render: text
+  - type: checkboxes
+    id: consent
+    attributes:
+      label: Consent
+      options: [{ label: I agree, required: true }]
